# icoding-client

./: .gitignore  Cargo.toml  Cloud_API_Requirements.md  README.md  Requirements_and_Planning.md  WebSocket_Protocol.md  build.rs  tauri.conf.json
.github/workflows/: build.yml
frontend-dist/: index.html  main.js  styles.css
icons/: icon.icns
src/: auth.rs  config.rs  desktop.rs  device.rs  error.rs  i18n.rs  lib.rs  main.rs  permissions.rs  policy.rs  protocol.rs  ws.rs
src/capabilities/: fs.rs  mod.rs  process.rs  system.rs
